--- a/html/02.html
+++ b/html/02.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
     <link rel="stylesheet" href="../css/02.css" />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>02. CSS + JS Clock</title>
   </head>
 
@@ -33,28 +26,29 @@
     </div>
 
     <script>
-      const secondsHand = document.querySelector(".second-hand");
-      const minsHand = document.querySelector(".min-hand");
-      const hoursHand = document.querySelector(".hour-hand");
+      const secondHand = document.querySelector(".second-hand");
+      const minHand = document.querySelector(".min-hand");
+      const hourHand = document.querySelector(".hour-hand");
 
       function setDate() {
         const now = new Date();
 
         const seconds = now.getSeconds();
         const secondsDegrees = (seconds / 60) * 360 + 90;
-        secondsHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
         const mins = now.getMinutes();
-        const minsDegrees = (mins / 60) * 360 + 90;
-        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+        const minsDegrees = (mins / 60) * 360 + (seconds / 60) * 6 + 90;
 
         const hours = now.getHours();
-        const hoursDegrees = (hours / 12) * 360 + 90;
-        hoursHand.style.transform = `rotate(${hoursDegrees}deg)`;
+        const hoursDegrees = (hours / 12) * 360 + (mins / 60) * 30 + 90;
+
+        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        minHand.style.transform = `rotate(${minsDegrees}deg)`;
+        hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
       }
 
-      setInterval(setDate, 1000);
       setDate();
+      setInterval(setDate, 1000);
     </script>
   </body>
 </html>
