--- a/html/03.html
+++ b/html/03.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
     <link rel="stylesheet" href="../css/03.css" />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>03. Playing with CSS Variables and JS</title>
   </head>
 
@@ -21,39 +14,16 @@
     <h2>Update CSS Variables with <span class="hl">JS</span></h2>
 
     <div class="controls">
+      <div class="controls-flex"></div>
       <label for="spacing">Spacing:</label>
-      <input
-        type="range"
-        id="spacing"
-        name="spacing"
-        min="10"
-        max="100"
-        value="0"
-        data-sizing="px"
-      />
-
+      <input type="range" id="spacing" name="spacing" min="10" max="30" value="0" data-sizing="px" />
+      <br />
       <label for="blur">Blur:</label>
-      <input
-        type="range"
-        id="blur"
-        name="blur"
-        min="0"
-        max="25"
-        value="0"
-        data-sizing="px"
-      />
+      <input type="range" id="blur" name="blur" min="0" max="25" value="0" data-sizing="px" />
       <br />
       <label for="borderRadius">Border-Radius:</label>
-      <input
-        type="range"
-        id="borderRadius"
-        name="borderRadius"
-        min="0"
-        max="50"
-        value="0"
-        data-sizing="%"
-      />
-
+      <input type="range" id="borderRadius" name="borderRadius" min="0" max="50" value="0" data-sizing="%" />
+      <br />
       <label for="baseColor">Base Color:</label>
       <input type="color" id="baseColor" name="baseColor" value="#ffc600" />
     </div>
@@ -65,16 +35,11 @@
 
       function handleChange() {
         const unit = this.dataset.sizing || "";
-        document.documentElement.style.setProperty(
-          `--${this.name}`,
-          this.value + unit
-        );
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + unit);
       }
 
-      inputs.forEach(input => input.addEventListener("change", handleChange));
-      inputs.forEach(input =>
-        input.addEventListener("mousemove", handleChange)
-      );
+      inputs.forEach((input) => input.addEventListener("change", handleChange));
+      inputs.forEach((input) => input.addEventListener("mousemove", handleChange));
     </script>
   </body>
 </html>
