--- a/html/04.html
+++ b/html/04.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>04. Array Cardio Day 1</title>
   </head>
 
@@ -24,7 +17,6 @@
       // ## Array Cardio Day 1
 
       // Some data we can work with
-
       const inventors = [
         { first: "Albert", last: "Einstein", year: 1879, passed: 1955 },
         { first: "Isaac", last: "Newton", year: 1643, passed: 1727 },
@@ -37,7 +29,7 @@
         { first: "Ada", last: "Lovelace", year: 1815, passed: 1852 },
         { first: "Sarah E.", last: "Goode", year: 1855, passed: 1905 },
         { first: "Lise", last: "Meitner", year: 1878, passed: 1968 },
-        { first: "Hanna", last: "Hammarström", year: 1829, passed: 1909 }
+        { first: "Hanna", last: "Hammarström", year: 1829, passed: 1909 },
       ];
 
       const people = [
@@ -81,28 +73,22 @@
         "Black, Elk",
         "Blair, Robert",
         "Blair, Tony",
-        "Blake, William"
+        "Blake, William",
       ];
 
       // Array.prototype.filter()
       // 1. Filter the list of inventors for those who were born in the 1500's
-      const fifteen = inventors.filter(
-        inventor => inventor.year >= 1500 && inventor.year < 1600
-      );
+      const fifteen = inventors.filter((inventor) => inventor.year >= 1500 && inventor.year < 1600);
       console.table(fifteen);
 
       // Array.prototype.map()
       // 2. Give us an array of the inventors' first and last names
-      const fullNames = inventors.map(
-        inventor => `${inventor.first} ${inventor.last}`
-      );
+      const fullNames = inventors.map((inventors) => `${inventors.first}, ${inventors.last}`);
       console.table(fullNames);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
-      const ordered = inventors.sort((a, b) =>
-        a.year > b.year ? 1 : a.year < b.year ? -1 : 0
-      );
+      const ordered = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
       console.table(ordered);
 
       // Array.prototype.reduce()
@@ -114,49 +100,34 @@
 
       // 5. Sort the inventors by years lived
       const oldest = inventors.sort((a, b) => {
-        const aInventor = a.passed - a.year;
-        const bInventor = b.passed - b.year;
-        return aInventor > bInventor ? -1 : aInventor < bInventor ? 1 : 0;
+        const lastInventor = a.passed - a.year;
+        const nextInventor = b.passed - b.year;
+        return lastInventor > nextInventor ? -1 : 1;
       });
       console.table(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+      // const category = document.querySelector(".mw-category");
+      // const links = Array.from(category.querySelectorAll("a"));
+      // const de = links.map((link) => link.textContent).filter((streetName) => streetName.includes("de"));
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
-      const alpha = people.sort((aPerson, bPerson) => {
-        const [aFirst, aLast] = aPerson.split(", ");
-        const [bFirst, bLast] = bPerson.split(", ");
-        return aLast > bLast ? 1 : aLast < bLast ? -1 : 0;
+      const alpha = people.sort((a, b) => {
+        const lastOne = a.split(", ");
+        const nextOne = b.split(", ");
+        return lastOne[1] > nextOne[1] ? 1 : -1;
       });
       console.table(alpha);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
-      const data = [
-        "car",
-        "car",
-        "truck",
-        "truck",
-        "bike",
-        "walk",
-        "car",
-        "van",
-        "bike",
-        "walk",
-        "car",
-        "van",
-        "car",
-        "truck"
-      ];
-      const transportation = data.reduce((obj, item) => {
-        if (item in obj) {
-          obj[item]++;
-        } else {
-          obj[item] = 1;
-        }
-        return obj;
+      const data = ["car", "car", "truck", "truck", "bike", "walk", "car", "van", "bike", "walk", "car", "van", "car", "truck"];
+      const transportation = data.reduce((Obj, item) => {
+        if (!Obj[item]) Obj[item] = 0;
+        Obj[item] += 1;
+        return Obj;
       }, {});
       console.log(transportation);
     </script>
