--- a/html/07.html
+++ b/html/07.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>07. Array Cardio 💪💪</title>
   </head>
 
@@ -25,7 +18,7 @@
         { name: "Wes", year: 1988 },
         { name: "Kait", year: 1986 },
         { name: "Irv", year: 1970 },
-        { name: "Lux", year: 2015 }
+        { name: "Lux", year: 2015 },
       ];
 
       const comments = [
@@ -33,42 +26,37 @@
         { text: "Super good", id: 823423 },
         { text: "You are the best", id: 2039842 },
         { text: "Ramen is my fav food ever", id: 123523 },
-        { text: "Nice Nice Nice!", id: 542328 }
+        { text: "Nice Nice Nice!", id: 542328 },
       ];
 
       // Some and Every Checks
       // Array.prototype.some() // is at least one person 19 or older?
-      const handleAdult = element => {
+      const handleAdult = (element) => {
         return new Date().getFullYear() - element + 1;
       };
-      const isAdult = people.some(person => handleAdult(person.year) >= 19);
+      const isAdult = people.some((person) => handleAdult(person.year) >= 19);
       console.log(isAdult);
 
       // Array.prototype.every() // is everyone 19 or older?
-      const allAdults = people.every(person => handleAdult(person.year) >= 19);
+      const allAdults = people.every((person) => handleAdult(person.year) >= 19);
       console.log(allAdults);
 
       // Array.prototype.find()
       // Find is like filter, but instead returns just the one you are looking for
       // find the comment with the ID of 823423
-      const handleFindId = element => {
+      const handleFindId = (element) => {
         return element === 823423;
       };
-      const comment = comments.find(comment => handleFindId(comment.id));
+      const comment = comments.find((comment) => handleFindId(comment.id));
       console.log(comment);
 
       // Array.prototype.findIndex()
       // Find the comment with this ID
-      const commentIndex = comments.findIndex(comment =>
-        handleFindId(comment.id)
-      );
+      const commentIndex = comments.findIndex((comment) => handleFindId(comment.id));
       console.log(commentIndex);
 
       // delete the comment with the ID of 823423
-      const newComments = [
-        ...comments.slice(0, commentIndex),
-        ...comments.slice(commentIndex + 1)
-      ];
+      const newComments = [...comments.slice(0, commentIndex), ...comments.slice(commentIndex + 1)];
       console.log(newComments);
     </script>
   </body>
